--- a/refs.bib
+++ b/refs.bib
@@ -226,3 +226,85 @@ month={July}
  address = {Hingham, MA, USA},
  keywords = {efficient learning algorithms, neural networks, pattern recognition, polynomial classifiers, radial basis function classifiers},
 } 
+
+@inproceedings{boser92,
+ author = {Boser, Bernhard E. and Guyon, Isabelle M. and Vapnik, Vladimir N.},
+ title = {A Training Algorithm for Optimal Margin Classifiers},
+ booktitle = {Proceedings of the Fifth Annual Workshop on Computational Learning Theory},
+ series = {COLT '92},
+ year = {1992},
+ isbn = {0-89791-497-X},
+ location = {Pittsburgh, Pennsylvania, USA},
+ pages = {144--152},
+ numpages = {9},
+ url = {http://doi.acm.org/10.1145/130385.130401},
+ doi = {10.1145/130385.130401},
+ acmid = {130401},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+@article{chang10,
+ author = {Chang, Yin-Wen and Hsieh, Cho-Jui and Chang, Kai-Wei and Ringgaard, Michael and Lin, Chih-Jen},
+ title = {Training and Testing Low-degree Polynomial Data Mappings via Linear SVM},
+ journal = {J. Mach. Learn. Res.},
+ issue_date = {3/1/2010},
+ volume = {11},
+ month = aug,
+ year = {2010},
+ issn = {1532-4435},
+ pages = {1471--1490},
+ numpages = {20},
+ url = {http://dl.acm.org/citation.cfm?id=1756006.1859899},
+ acmid = {1859899},
+ publisher = {JMLR.org},
+} 
+
+@inproceedings{ho95,
+ author = {Ho, Tin Kam},
+ title = {Random Decision Forests},
+ booktitle = {Proceedings of the Third International Conference on Document Analysis and Recognition (Volume 1) - Volume 1},
+ series = {ICDAR '95},
+ year = {1995},
+ isbn = {0-8186-7128-9},
+ pages = {278--},
+ url = {http://dl.acm.org/citation.cfm?id=844379.844681},
+ acmid = {844681},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+ keywords = {complexity, decision theory, decision trees, generalization accuracy, handwriting recognition, handwritten digits, optical character recognition, random decision forests, stochastic modeling, suboptimal accuracy, tree-based classifiers},
+} 
+
+@Article{breiman01,
+author="Breiman, Leo",
+title="Random Forests",
+journal="Machine Learning",
+year="2001",
+month="Oct",
+day="01",
+volume="45",
+number="1",
+pages="5--32",
+abstract="Random forests are a combination of tree predictors such that each tree depends on the values of a random vector sampled independently and with the same distribution for all trees in the forest. The generalization error for forests converges a.s. to a limit as the number of trees in the forest becomes large. The generalization error of a forest of tree classifiers depends on the strength of the individual trees in the forest and the correlation between them. Using a random selection of features to split each node yields error rates that compare favorably to Adaboost (Y. Freund {\&} R. Schapire, Machine Learning: Proceedings of the Thirteenth International conference, ***, 148--156), but are more robust with respect to noise. Internal estimates monitor error, strength, and correlation and these are used to show the response to increasing the number of features used in the splitting. Internal estimates are also used to measure variable importance. These ideas are also applicable to regression.",
+issn="1573-0565",
+doi="10.1023/A:1010933404324",
+url="https://doi.org/10.1023/A:1010933404324"
+}
+
+@book{breiman17,
+  title={Classification and regression trees},
+  author={Breiman, Leo},
+  year={2017},
+  publisher={Routledge}
+}
+
+@article{otsu79,
+  title={A threshold selection method from gray-level histograms},
+  author={Otsu, Nobuyuki},
+  journal={IEEE transactions on systems, man, and cybernetics},
+  volume={9},
+  number={1},
+  pages={62--66},
+  year={1979},
+  publisher={IEEE}
+}
